# serde-rdf

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: check.yml  rolling.yml  test.yml
examples/: deserialize.rs  serialize.rs
src/: de.rs  error.rs  lib.rs  ser.rs  structure.rs
